Admin can show all categories

--- a/Acme-Together/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages.properties
@@ -8,6 +8,7 @@
 
 master.page.registerDistributor		= Register a Distributor
 master.page.registerCommercial		= Register a Commercial
+master.page.listCategories			= Categories
 master.page.registerUser			= Register
 master.page.administrator			= Administrator
 master.page.administrator.action.1	= Action 1
