--- a/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
@@ -8,6 +8,7 @@
 
 master.page.registerDistributor		= Registrar a un Distribuidor
 master.page.registerCommercial		= Registrar a un Comercial
+master.page.listCategories			= Categorías
 master.page.registerUser			= Registrarse
 master.page.administrator			= Administrador
 master.page.administrator.action.1	= Acción 1
