--- a/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
@@ -6,6 +6,9 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+master.page.registerDistributor		= Registrar a un Distribuidor
+master.page.registerCommercial		= Registrar a un Comercial
+master.page.registerUser			= Registrarse
 master.page.administrator			= Administrador
 master.page.administrator.action.1	= Acción 1
 master.page.administrator.action.2	= Acción 2
