--- a/Acme-Together/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages.properties
@@ -6,6 +6,9 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+master.page.registerDistributor		= Register a Distributor
+master.page.registerCommercial		= Register a Commercial
+master.page.registerUser			= Register
 master.page.administrator			= Administrator
 master.page.administrator.action.1	= Action 1
 master.page.administrator.action.2	= Action 2
