--- a/Acme-Together/src/main/webapp/views/category/messages.properties
+++ b/Acme-Together/src/main/webapp/views/category/messages.properties
@@ -27,3 +27,5 @@ category.createNested = Create Nested
 category.confirm.delete = Are you sure you want to delete this category?
 category.delete.error   = You can't delete this category
 category.commit.error = Category commit error
+category.confirm.delete = Are you sure about delete selected category?
+category.confirmation.delete = Category has been deleted!
