--- a/Acme-Together/src/main/webapp/views/category/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/category/messages_es.properties
@@ -27,4 +27,6 @@ category.createNested = Crear Subcategoria
 category.confirm.delete = ¿Está seguro de que desea eliminar esta categoría?
 category.delete.error   = No es posible borrar esta categoría
 category.commit.error = No se ha podido realizar la transacción.
+category.confirm.delete = ¿Está seguro de que desea borrar la categoría seleccionada?
+category.confirmation.delete = La categoría ha sido borrada
 
