--- a/Acme-Together/src/main/webapp/views/misc/messages.properties
+++ b/Acme-Together/src/main/webapp/views/misc/messages.properties
@@ -39,3 +39,6 @@ panic.text 		  = Sorry for the inconvenience.  The following exception was throw
 panic.message 	  = Message
 panic.stack.trace = Stack trace
 
+forbiddenOperation = You don't access to this operation
+back = Back
+
