display profile user - creditCard (FALTA VALIDAR CC)

--- a/Acme-Together/src/main/webapp/views/user/messages.properties
+++ b/Acme-Together/src/main/webapp/views/user/messages.properties
@@ -73,6 +73,9 @@ creditCard.number = Number of the CreditCard
 creditCard.expirationMonth = Expiration Month
 creditCard.expirationYear = Expiration Year
 creditCard.cvvCode = CvvCode
+creditCard.accept = Accept
+creditCard.commit.error = Error	
+
 user.editCreditCard =  Edit Credit Card
 user.createCreditCard =  Create Credit Card
 
