--- a/Acme-Together/src/main/webapp/views/user/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/user/messages_es.properties
@@ -76,5 +76,9 @@ creditCard.number = Numero tarjeta
 creditCard.expirationMonth = Mes caducidad
 creditCard.expirationYear = Año caducidad
 creditCard.cvvCode = cvvCode
-user.editCreditCard = Editar Tarjeta de Credito
-user.createCreditCard =  Crear Credit Card
+creditCard.accept = Aceptar
+creditCard.commit.error = Error	
+
+user.editCreditCard =  Editar Tarjeta de Credito
+user.createCreditCard =  Crear Tarjeta de Credito
+
