Admin can ban users

--- a/Acme-Together/src/main/webapp/views/user/messages.properties
+++ b/Acme-Together/src/main/webapp/views/user/messages.properties
@@ -8,7 +8,7 @@
 
 
 user.adress = Address
-user.identefication = Identification
+user.identification = Identification
 user.picture = Picture
 user.name =  Name
 user.surname = Surname
@@ -42,9 +42,13 @@ user.cancel = Cancel
 user.duplicated.user = Duplicated user
 user.commit.error					= Couldn't commit this operation
 
-user.banuser = Ban
-user.unBanuser = Unban 
+user.banUser = Ban
+user.unBanUser = Unban 
+user.confirm.ban = Are you sure about ban this User?
+user.confirm.unBan = Are you sure about unban this User?
+
 user.editprofile = Edit Profile
+user.profile = Profile
 
 
 dataProtection.title					= ORGANIC LAW OF PROTECTION OF PERSONAL DATA
