--- a/Acme-Together/src/main/webapp/views/user/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/user/messages_es.properties
@@ -8,7 +8,7 @@
 
 
 user.adress = Dirección
-user.identefication = Identificación
+user.identification = Identificación
 user.editLocationInformation	 = Editar Localización
 user.picture = Imagen
 user.name =  Nombre
@@ -44,10 +44,14 @@ user.username = Nombre de usuario
 user.password = Contraseña
 user.passwordConf = Confirmar Contraseña
 
-user.banuser = Prohibir
-user.unBanuser = Permitir 
+user.banUser = Prohibir
+user.unBanUser = Permitir 
+user.confirm.ban = ¿Está seguro que desea prohibir a dicho Usuario?
+user.confirm.unBan = ¿Está seguro que desea permitir a dicho Usuario?
 
 user.editProfile = Editar Perfil
+user.profile = Perfil
+
 
 dataProtection.title					= LEY ORGÁNICA DE PROTECCIÓN DE DATOS
 dataProtection.whatIs					= En esta Sección se expone la Política de Privacidad que regula el uso del servicio del sitio web Acme BnB que pone a la disposición de los usuarios de Internet, sobre la información de carácter personal que puede facilitar cuando visita nuestra página web.
