--- a/Acme-Together/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages.properties
@@ -23,5 +23,7 @@ master.page.profile.action.1 		= Action 1
 master.page.profile.action.2		= Action 2
 master.page.profile.action.3		= Action 3
 
+master.page.allUsers    			= All Users
+
 master.page.login 					= Login
 master.page.logout 					= Logout
