User can't enter to the system if he has been banned

--- a/Acme-Together/src/main/webapp/views/security/messages.properties
+++ b/Acme-Together/src/main/webapp/views/security/messages.properties
@@ -13,4 +13,4 @@ security.password		= Password:
 
 security.login			= Login
 
-security.login.failed	= Your user name or password is wrong! 
+security.login.failed	= Your user name or password is wrong or your account may have been banned! 
