todos los casos de uso sobre Private Message

--- a/Acme-Together/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages.properties
@@ -26,5 +26,10 @@ master.page.profile.action.3		= Action 3
 
 master.page.allUsers    			= All Users
 
+master.page.chirp = Private Messages
+master.page.chirp.create = Send a new message
+master.page.chirp.sent = Messages sent
+master.page.chirp.received = Messages Received 
+
 master.page.login 					= Login
 master.page.logout 					= Logout
