--- a/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
@@ -27,5 +27,11 @@ master.page.profile.action.3		= Acción 3
 
 master.page.allUsers    			= Usuarios
 
+master.page.chirp = Mensajes Privados
+master.page.chirp.create = Envia un nuevo mensaje
+master.page.chirp.sent = Mensajes Enviados
+master.page.chirp.received = Mensajes Recibidos 
+
+
 master.page.login 					= Entrar
 master.page.logout 					= Salir
