Añadido lista de amigos y lista para follow y unfollow

--- a/Acme-Together/src/main/webapp/views/user/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/user/messages_es.properties
@@ -52,6 +52,9 @@ user.confirm.unBan = ¿Está seguro que desea permitir a dicho Usuario?
 user.editProfile = Editar Perfil
 user.profile = Perfil
 
+user.follow = seguir!
+user.unfollow = dejar de seguir!
+
 
 dataProtection.title					= LEY ORGÁNICA DE PROTECCIÓN DE DATOS
 dataProtection.whatIs					= En esta Sección se expone la Política de Privacidad que regula el uso del servicio del sitio web Acme BnB que pone a la disposición de los usuarios de Internet, sobre la información de carácter personal que puede facilitar cuando visita nuestra página web.
