--- a/Acme-Together/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages.properties
@@ -12,17 +12,13 @@ master.page.listCategories			= Categories
 master.page.UserJoinedShoppingGroups= Joined Shopping Groups
 master.page.registerUser			= Register
 master.page.administrator			= Administrator
-master.page.administrator.action.1	= Action 1
-master.page.administrator.action.2	= Action 2
+
 
 master.page.customer				= Customer
-master.page.customer.action.1		= Action 1
-master.page.customer.action.2		= Action 2
+
 
 master.page.profile 				= Profile
-master.page.profile.action.1 		= Action 1
-master.page.profile.action.2		= Action 2
-master.page.profile.action.3		= Action 3
+
 
 master.page.allUsers    			= All Users
 
@@ -30,6 +26,10 @@ master.page.chirp = Private Messages
 master.page.chirp.create = Send a new message
 master.page.chirp.sent = Messages sent
 master.page.chirp.received = Messages Received 
+
+master.page.followPeople = Follow People!
+master.page.followMorePeople = Follow More People.
+master.page.yourFriends = Your friends
 
 master.page.login 					= Login
 master.page.logout 					= Logout
