--- a/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
@@ -13,17 +13,13 @@ master.page.listCategories			= Categorías
 master.page.UserJoinedShoppingGroups= Grupos a los que esta unido.
 master.page.registerUser			= Registrarse
 master.page.administrator			= Administrador
-master.page.administrator.action.1	= Acción 1
-master.page.administrator.action.2	= Acción 2
+
 
 master.page.customer				= Cliente
-master.page.customer.action.1		= Acción 1
-master.page.customer.action.2		= Acción 2
+
 
 master.page.profile 				= Perfil
-master.page.profile.action.1 		= Acción 1
-master.page.profile.action.2		= Acción 2
-master.page.profile.action.3		= Acción 3
+
 
 master.page.allUsers    			= Usuarios
 
@@ -31,6 +27,10 @@ master.page.chirp = Mensajes Privados
 master.page.chirp.create = Envia un nuevo mensaje
 master.page.chirp.sent = Mensajes Enviados
 master.page.chirp.received = Mensajes Recibidos 
+
+master.page.followPeople = Sigue a gente!
+master.page.followMorePeople = Sigue a mas gente!
+master.page.yourFriends = Tus amigos
 
 
 master.page.login 					= Entrar
