--- a/Acme-Together/src/main/webapp/views/user/messages.properties
+++ b/Acme-Together/src/main/webapp/views/user/messages.properties
@@ -50,6 +50,9 @@ user.confirm.unBan = Are you sure about unban this User?
 user.editprofile = Edit Profile
 user.profile = Profile
 
+user.follow = follow 
+user.unfollow = unfollow
+
 
 dataProtection.title					= ORGANIC LAW OF PROTECTION OF PERSONAL DATA
 dataProtection.whatIs					= In this Section there is exposed the Privacy Policy that regulates the use of the service of the web site Acme BnB that it puts to the disposition of the Internet user, on the information of personal character that it can facilitate when he visits our web page.
