listado shopping groups después de conflictos

--- a/Acme-Together/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages.properties
@@ -33,3 +33,5 @@ master.page.yourFriends = Your friends
 
 master.page.login 					= Login
 master.page.logout 					= Logout
+
+master.page.shoppingGroupsPublic = Shopping Groups 
