--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -6,6 +6,17 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+sh.privateGroup = Is a private group?
+sh.privateGroupTrue = Yes, it is
+sh.privateGroupFalse = No, it isn't
+sh.name = Name
+sh.description = Description
+sh.freePlaces = Free places
+sh.frecuentedSites = Frequented sites
+sh.puntuation = Punctuation
+sh.emptyFc = There are not registered sites
+
+
 shoppingGroup.name 					= Name
 shoppingGroup.description			= Description
 shoppingGroup.puntuation			= Puntuation
