--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -6,10 +6,20 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+sh.privateGroup = ¿Es un grupo privado?
+sh.privateGroupTrue = Sí, es privado
+sh.privateGroupFalse = No, es público
+sh.name = Nombre
+sh.description = Descripción
+sh.freePlaces = Plazas libres
+sh.frecuentedSites = Páginas frecuentadas
+sh.puntuation = Puntuación
+sh.emptyFc = No hay sitios registrados
+
+
 shoppingGroup.name 					= Nombre
 shoppingGroup.description			= Descripción
 shoppingGroup.puntuation			= Puntuación
 shoppingGroup.private				= Privado
 shoppingGroup.lastOrderDate			= Último Pedido
 shoppingGroup.freePlaces			= Plazas Libres
-
