--- a/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
@@ -35,3 +35,5 @@ master.page.yourFriends = Tus amigos
 
 master.page.login 					= Entrar
 master.page.logout 					= Salir
+
+master.page.shoppingGroupsPublic = Grupos de compra
