Changes in Domain and Populate

--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -23,3 +23,6 @@ shoppingGroup.puntuation			= Puntuation
 shoppingGroup.private				= Private
 shoppingGroup.lastOrderDate			= Last Order
 shoppingGroup.freePlaces			= Free Places
+shoppingGroup.join					= Join
+shoppingGroup.alreadyJoined			= Already Joined
+shoppingGroup.confirm.join			= Are you sure about join to this group?
