--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -23,3 +23,6 @@ shoppingGroup.puntuation			= Puntuación
 shoppingGroup.private				= Privado
 shoppingGroup.lastOrderDate			= Último Pedido
 shoppingGroup.freePlaces			= Plazas Libres
+shoppingGroup.join					= Unirse
+shoppingGroup.alreadyJoined			= Unido
+shoppingGroup.confirm.join			= ¿Está seguro de que desea unirse a este grupo?
