--- a/Acme-Together/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages.properties
@@ -9,6 +9,7 @@ master.page.viewProfile				= View Profile
 master.page.registerDistributor		= Register a Distributor
 master.page.registerCommercial		= Register a Commercial
 master.page.listCategories			= Categories
+master.page.listDistributors		= Distributors
 master.page.UserJoinedShoppingGroups= Joined Shopping Groups
 master.page.registerUser			= Register
 master.page.administrator			= Administrator
