--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -15,6 +15,22 @@ sh.freePlaces = Free places
 sh.frecuentedSites = Frequented sites
 sh.puntuation = Punctuation
 sh.emptyFc = There are not registered sites
+sh.display = Know more
+sh.Info = Information about this shopping group
+sh.users = Users in this shopping group
+sh.products = Products in this shopping group
+product.name = Name
+product.url =  Link
+product.referenceNumber = Reference number
+product.price = Price
+sh.cooments = Comments
+comment.title = Title
+comment.text = Text
+comment.moment = Moment
+sh.category = Category
+category.name = Name
+category.description = Description
+product.enlace = Go to the site
 
 
 shoppingGroup.name 					= Name
@@ -23,3 +39,8 @@ shoppingGroup.puntuation			= Puntuation
 shoppingGroup.private				= Private
 shoppingGroup.lastOrderDate			= Last Order
 shoppingGroup.freePlaces			= Free Places
+
+shoppingGroup.freePlaces			= Free Places
+shoppingGroup.join					= Join
+shoppingGroup.alreadyJoined			= Already Joined
+shoppingGroup.confirm.join			= Are you sure about join to this group?
