arreglos en display y populate

--- a/Acme-Together/src/main/webapp/views/misc/messages.properties
+++ b/Acme-Together/src/main/webapp/views/misc/messages.properties
@@ -40,5 +40,6 @@ panic.message 	  = Message
 panic.stack.trace = Stack trace
 
 forbiddenOperation = You don't access to this operation
+sh.private = It is a private shopping group
 back = Back
 
