--- a/Acme-Together/src/main/webapp/views/misc/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/misc/messages_es.properties
@@ -40,4 +40,5 @@ panic.message 	  = Mensaje
 panic.stack.trace = Traza
 
 forbiddenOperation = No tiene acceso a esta operación.
+sh.private = Es un grupo de compra privado
 back = Volver
