follow and unfollow

--- a/Acme-Together/src/main/webapp/views/user/messages.properties
+++ b/Acme-Together/src/main/webapp/views/user/messages.properties
@@ -53,6 +53,13 @@ user.profile = Profile
 user.follow = follow 
 user.unfollow = unfollow
 
+shoppingGroup.name 					= Name
+shoppingGroup.description			= Description
+shoppingGroup.puntuation			= Puntuation
+shoppingGroup.private				= Private
+shoppingGroup.lastOrderDate			= Last Order
+shoppingGroup.freePlaces			= Free Places
+
 
 dataProtection.title					= ORGANIC LAW OF PROTECTION OF PERSONAL DATA
 dataProtection.whatIs					= In this Section there is exposed the Privacy Policy that regulates the use of the service of the web site Acme BnB that it puts to the disposition of the Internet user, on the information of personal character that it can facilitate when he visits our web page.
