--- a/Acme-Together/src/main/webapp/views/user/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/user/messages_es.properties
@@ -55,6 +55,13 @@ user.profile = Perfil
 user.follow = seguir!
 user.unfollow = dejar de seguir!
 
+shoppingGroup.name 					= Nombre
+shoppingGroup.description			= Descripción
+shoppingGroup.puntuation			= Puntuación
+shoppingGroup.private				= Privado
+shoppingGroup.lastOrderDate			= Último Pedido
+shoppingGroup.freePlaces			= Plazas Libres
+
 
 dataProtection.title					= LEY ORGÁNICA DE PROTECCIÓN DE DATOS
 dataProtection.whatIs					= En esta Sección se expone la Política de Privacidad que regula el uso del servicio del sitio web Acme BnB que pone a la disposición de los usuarios de Internet, sobre la información de carácter personal que puede facilitar cuando visita nuestra página web.
