User can add product in shoppingGroup

--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -39,6 +39,7 @@ shoppingGroup.puntuation			= Puntuation
 shoppingGroup.private				= Private
 shoppingGroup.lastOrderDate			= Last Order
 shoppingGroup.freePlaces			= Free Places
+shoppingGroup.addProduct            = Add Product
 
 shoppingGroup.join					= Join
 shoppingGroup.alreadyJoined			= Already Joined
