--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -41,6 +41,7 @@ shoppingGroup.puntuation			= Puntuación
 shoppingGroup.private				= Privado
 shoppingGroup.lastOrderDate			= Último Pedido
 shoppingGroup.freePlaces			= Plazas Libres
+shoppingGroup.addProduct            = Añadir Producto
 
 
 
