--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -12,7 +12,7 @@ sh.privateGroupFalse = No, it isn't
 sh.name = Name
 sh.description = Description
 sh.freePlaces = Free places
-sh.frecuentedSites = Frequented sites
+sh.site = Site
 sh.puntuation = Punctuation
 sh.emptyFc = There are not registered sites
 sh.display = Know more
@@ -31,6 +31,17 @@ sh.category = Category
 category.name = Name
 category.description = Description
 product.enlace = Go to the site
+
+
+sh.termsOfUse.confirmation = I have read the and accept the
+sh.termsOfUse.link = Terms of use
+
+sh.commit.error = Cannot commit this operation
+
+sh.accept = Save
+sh.cancel = Cancel
+
+shoppingGroup.create = Create a new ShoppingGroup
 
 
 shoppingGroup.name 					= Name
