--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -12,7 +12,7 @@ sh.privateGroupFalse = No, es público
 sh.name = Nombre
 sh.description = Descripción
 sh.freePlaces = Plazas libres
-sh.frecuentedSites = Páginas frecuentadas
+sh.site =Sitio de compra
 sh.puntuation = Puntuación
 sh.emptyFc = No hay sitios registrados
 sh.users   = Usuarios en este grupo de compra
@@ -33,6 +33,16 @@ sh.category = Categoría
 category.name = Nombre
 category.description = Descripción
 product.enlace = Ver en la página web
+
+sh.termsOfUse.confirmation = He leído y acepto los
+sh.termsOfUse.link = Términos de uso
+
+sh.accept = Guardar
+sh.cancel = Cancelar
+
+sh.commit.error = No se pudo ejecutar la operación
+
+shoppingGroup.create = Crear un nuevo grupo de compra
 
 
 shoppingGroup.name 					= Nombre
