arreglos en listado de shoppingGroup propios y comienzo de la edición de grupos

--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -32,16 +32,24 @@ category.name = Name
 category.description = Description
 product.enlace = Go to the site
 
+sh.ShIBelong = Shopping Groups I belongs to
+sh.MySh = My Shopping Groups
 
 sh.termsOfUse.confirmation = I have read the and accept the
 sh.termsOfUse.link = Terms of use
 
 sh.commit.error = Cannot commit this operation
 
+
+
 sh.accept = Save
 sh.cancel = Cancel
+sh.edit = Edit this shopping group
+sh.noteditableInList=This group cannot be edited, you are waiting for a order
+sh.noteditableInList2= You can't edit this group
 
 shoppingGroup.create = Create a new ShoppingGroup
+
 
 
 shoppingGroup.name 					= Name
