--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -37,8 +37,16 @@ product.enlace = Ver en la página web
 sh.termsOfUse.confirmation = He leído y acepto los
 sh.termsOfUse.link = Términos de uso
 
+sh.ShIBelong = Grupos de compra a los que pertenezco
+sh.MySh = Mis grupos de compra
+
 sh.accept = Guardar
 sh.cancel = Cancelar
+
+sh.edit = Editar este grupo de compras
+sh.noteditableInList = No es posible editar este grupo, aún esperan recibir un pedido
+sh.noteditableInList2 = No puede editar este grupo
+
 
 sh.commit.error = No se pudo ejecutar la operación
 
