Editar grupos de compra y arreglos en el create

--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -40,6 +40,10 @@ sh.termsOfUse.link = Terms of use
 
 sh.commit.error = Cannot commit this operation
 
+sh.terms.must.accept = You must accept the terms of use
+
+sh.not.edit2 = You cannot edit this shopping group
+
 
 
 sh.accept = Save
@@ -50,6 +54,7 @@ sh.noteditableInList2= You can't edit this group
 
 shoppingGroup.create = Create a new ShoppingGroup
 
+sh.not.mine = You can only edit the groups that you have created
 
 
 shoppingGroup.name 					= Name
