--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -52,6 +52,12 @@ sh.commit.error = No se pudo ejecutar la operación
 
 shoppingGroup.create = Crear un nuevo grupo de compra
 
+sh.terms.must.accept = Debe aceptar los términos de uso
+
+sh.not.edit2 = No puede editar este grupo de compras
+
+sh.not.mine = No puede editar un grupo que no ha creado
+
 
 shoppingGroup.name 					= Nombre
 shoppingGroup.description			= Descripción
