delete shopping group with message

--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -49,12 +49,16 @@ sh.not.edit2 = You cannot edit this shopping group
 sh.accept = Save
 sh.cancel = Cancel
 sh.edit = Edit this shopping group
-sh.noteditableInList=This group cannot be edited, you are waiting for a order
+sh.delete = Delete
+sh.notdeletableInList = This group cannot be deleted, you are waiting for a order
+
+
+sh.noteditableInList=This group cannot be edited or deleted, you are waiting for a order
 sh.noteditableInList2= You can't edit this group
 
 shoppingGroup.create = Create a new ShoppingGroup
 
-sh.not.mine = You can only edit the groups that you have created
+sh.not.mine = You can only edit or delete the groups that you have created
 
 
 shoppingGroup.name 					= Name
