--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -44,8 +44,11 @@ sh.accept = Guardar
 sh.cancel = Cancelar
 
 sh.edit = Editar este grupo de compras
-sh.noteditableInList = No es posible editar este grupo, aún esperan recibir un pedido
+sh.noteditableInList = No es posible editar o eliminar este grupo, aún esperan recibir un pedido
 sh.noteditableInList2 = No puede editar este grupo
+
+sh.delete = Eliminar
+sh.notdeletableInList = No es posible eliminar este grupo, aún esperan recibir un pedido
 
 
 sh.commit.error = No se pudo ejecutar la operación
@@ -56,7 +59,7 @@ sh.terms.must.accept = Debe aceptar los términos de uso
 
 sh.not.edit2 = No puede editar este grupo de compras
 
-sh.not.mine = No puede editar un grupo que no ha creado
+sh.not.mine = No puede editar o eliminar un grupo que no ha creado
 
 
 shoppingGroup.name 					= Nombre
