Edit Product form don't show validation errors

--- a/Acme-Together/src/main/webapp/views/product/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/product/messages_es.properties
@@ -16,4 +16,5 @@ product.save						= Guardar
 product.cancel						= Cancelar
 product.edit						= Editar
 product.delete						= Borrar
+product.confirm.delete				= ¿Estás seguro de que desea borrar el siguiente producto?
 
