--- a/Acme-Together/src/main/webapp/views/product/messages.properties
+++ b/Acme-Together/src/main/webapp/views/product/messages.properties
@@ -16,3 +16,4 @@ product.save						= Save
 product.cancel						= Cancel
 product.edit						= Edit
 product.delete						= Delete
+product.confirm.delete				= Are you sure about delete the following product?
