Unirse a un grupo público

--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -44,7 +44,7 @@ sh.terms.must.accept = You must accept the terms of use
 
 sh.not.edit2 = You cannot edit this shopping group
 
-
+sh.jointTo.must.accept.conditions = You must accept the terms and conditions
 
 sh.accept = Save
 sh.cancel = Cancel
@@ -59,6 +59,8 @@ sh.noteditableInList2= You can't edit this group
 shoppingGroup.create = Create a new ShoppingGroup
 
 sh.not.mine = You can only edit or delete the groups that you have created
+
+sh.joinTo.mess = You will join the private shopping group:
 
 
 shoppingGroup.name 					= Name
