--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -50,6 +50,7 @@ sh.noteditableInList2 = No puede editar este grupo
 sh.delete = Eliminar
 sh.notdeletableInList = No es posible eliminar este grupo, aún esperan recibir un pedido
 
+sh.jointTo.must.accept.conditions = Debe aceptar los términos y condiciones
 
 sh.commit.error = No se pudo ejecutar la operación
 
@@ -70,7 +71,7 @@ shoppingGroup.lastOrderDate			= Último Pedido
 shoppingGroup.freePlaces			= Plazas Libres
 shoppingGroup.addProduct            = Añadir Producto
 
-
+sh.joinTo.mess = Va a unirse al siguiente grupo de compras:
 
 shoppingGroup.join					= Unirse
 shoppingGroup.alreadyJoined			= Unido
