arreglos en los metodos de unirse a grupos publicos

--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -62,6 +62,7 @@ sh.not.mine = You can only edit or delete the groups that you have created
 
 sh.joinTo.mess = You will join the private shopping group:
 
+sh.not.join.error = Operation not allowed
 
 shoppingGroup.name 					= Name
 shoppingGroup.description			= Description
