--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -62,6 +62,7 @@ sh.not.edit2 = No puede editar este grupo de compras
 
 sh.not.mine = No puede editar o eliminar un grupo que no ha creado
 
+sh.not.join.error = Operación no permitida
 
 shoppingGroup.name 					= Nombre
 shoppingGroup.description			= Descripción
