cambio en queries y algunos mensajes

--- a/Acme-Together/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages.properties
@@ -30,7 +30,7 @@ master.page.chirp.received = Messages Received
 
 master.page.followPeople = Follow People!
 master.page.followMorePeople = Follow More People.
-master.page.yourFriends = Your friends
+master.page.yourFriends = Users that you follow
 
 master.page.login 					= Login
 master.page.logout 					= Logout
