--- a/Acme-Together/src/main/webapp/views/user/messages.properties
+++ b/Acme-Together/src/main/webapp/views/user/messages.properties
@@ -50,6 +50,7 @@ user.confirm.unBan = Are you sure about unban this User?
 user.editprofile = Edit Profile
 user.profile = Profile
 
+user.ShoppingGroups = My publics shopping groups
 user.follow = follow 
 user.unfollow = unfollow
 
