--- a/Acme-Together/src/main/webapp/views/user/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/user/messages_es.properties
@@ -51,7 +51,7 @@ user.confirm.unBan = ¿Está seguro que desea permitir a dicho Usuario?
 
 user.editProfile = Editar Perfil
 user.profile = Perfil
-
+user.ShoppingGroups = Mis grupos de compra publicos
 user.follow = seguir!
 user.unfollow = dejar de seguir!
 
