--- a/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
@@ -31,7 +31,7 @@ master.page.chirp.received = Mensajes Recibidos
 
 master.page.followPeople = Sigue a gente!
 master.page.followMorePeople = Sigue a mas gente!
-master.page.yourFriends = Tus amigos
+master.page.yourFriends = Usuarios que sigues!
 
 
 master.page.login 					= Entrar
