Se pueden postear comentarios, controlado a su vez, que los enlaces de añadir productos no se vea en shopping groups que no estas registrado

--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -72,6 +72,8 @@ shoppingGroup.lastOrderDate			= Last Order
 shoppingGroup.freePlaces			= Free Places
 shoppingGroup.addProduct            = Add Product
 
+user.comment = Do a new comment 
+
 shoppingGroup.join					= Join
 shoppingGroup.alreadyJoined			= Already Joined
 shoppingGroup.confirm.join			= Are you sure about join to this group?
