--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -72,6 +72,8 @@ shoppingGroup.lastOrderDate			= Último Pedido
 shoppingGroup.freePlaces			= Plazas Libres
 shoppingGroup.addProduct            = Añadir Producto
 
+user.comment = Realiza un nuevo comentario
+
 sh.joinTo.mess = Va a unirse al siguiente grupo de compras:
 
 shoppingGroup.join					= Unirse
