User can punctuate a shoppingGroup

--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -68,7 +68,11 @@ shoppingGroup.private				= Private
 shoppingGroup.lastOrderDate			= Last Order
 shoppingGroup.freePlaces			= Free Places
 shoppingGroup.addProduct            = Add Product
+shoppingGroup.punctuate				= Punctuate
 
 shoppingGroup.join					= Join
 shoppingGroup.alreadyJoined			= Already Joined
 shoppingGroup.confirm.join			= Are you sure about join to this group?
+
+shoppingGroup.alreadyPunctuated     = You have already rated this group with: 
+shoppingGroup.alreadyPunctuated2	= If you wish you can re-rate.
