--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -69,9 +69,12 @@ shoppingGroup.private				= Privado
 shoppingGroup.lastOrderDate			= Último Pedido
 shoppingGroup.freePlaces			= Plazas Libres
 shoppingGroup.addProduct            = Añadir Producto
+shoppingGroup.punctuate				= Puntuar
 
 
 
 shoppingGroup.join					= Unirse
 shoppingGroup.alreadyJoined			= Unido
 shoppingGroup.confirm.join			= ¿Está seguro de que desea unirse a este grupo?
+shoppingGroup.alreadyPunctuated     = Usted ya ha puntuado a este grupo con: 
+shoppingGroup.alreadyPunctuated2	= Si lo desea puede volver a puntuar.
