mitad del dashboard

--- a/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
@@ -39,3 +39,6 @@ master.page.login 					= Entrar
 master.page.logout 					= Salir
 
 master.page.shoppingGroupsPublic = Grupos de compra
+
+master.page.dashboard = Dashboard
+master.page.admin.dashboard = Mi dashboard personal 
