--- a/Acme-Together/src/main/webapp/views/administrator/messages.properties
+++ b/Acme-Together/src/main/webapp/views/administrator/messages.properties
@@ -6,5 +6,10 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-administrator.action.1	= This is the administrator's action 1
-administrator.action.2	= This is the administrator's action 2
+administrator.numberOfUserRegistered = Numbers of user registered
+administrator.numberOfOrderLastMonth = Numbers of last month orders
+administrator.usersWhoCreateMoreShoppingGroup = Users who create more shopping group
+administrator.usersWhoCreateMinusShoppingGroup = User who create minus shopping group
+
+administrator.actor.name = User account name
+administrator.actor.sg = Numbers of shopping group create by him
