--- a/Acme-Together/src/main/webapp/views/administrator/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/administrator/messages_es.properties
@@ -6,5 +6,10 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-administrator.action.1	= Esta es la acción 1 del administrador
-administrator.action.2	= Esta es la acción 2 del administrador
+administrator.numberOfUserRegistered = Numero de usuarios registrados
+administrator.numberOfOrderLastMonth = Numero de pedidos del mes pasado 
+administrator.usersWhoCreateMoreShoppingGroup = Usuarios que han creado mas grupos de compra
+administrator.usersWhoCreateMinusShoppingGroup = Usuarios que han creado menos grupos de compra
+
+administrator.actor.name = Nombre de usuario 
+administrator.actor.sg = Numero de grupos de comprar creados por el
