--- a/Acme-Together/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages.properties
@@ -36,3 +36,7 @@ master.page.login 					= Login
 master.page.logout 					= Logout
 
 master.page.shoppingGroupsPublic = Shopping Groups 
+
+
+master.page.dashboard = Dashboard
+master.page.admin.dashboard = My personal dashboard
