--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -56,11 +56,12 @@ sh.notdeletableInList = This group cannot be deleted, you are waiting for a orde
 sh.noteditableInList=This group cannot be edited or deleted, you are waiting for a order
 sh.noteditableInList2= You can't edit this group
 
-shoppingGroup.create = Create a new ShoppingGroup
+shoppingGroup.create = Create a new public ShoppingGroup
 
 sh.not.mine = You can only edit or delete the groups that you have created
 
-sh.joinTo.mess = You will join the private shopping group:
+sh.joinTo.mess = You will join the public shopping group:
+sh.joinTo.mess.private = You will join the private shopping group:
 
 sh.not.join.error = Operation not allowed
 
@@ -72,8 +73,34 @@ shoppingGroup.lastOrderDate			= Last Order
 shoppingGroup.freePlaces			= Free Places
 shoppingGroup.addProduct            = Add Product
 
+shoppingGroup.punctuate				= Punctuate
+
 user.comment = Do a new comment 
 
 shoppingGroup.join					= Join
 shoppingGroup.alreadyJoined			= Already Joined
 shoppingGroup.confirm.join			= Are you sure about join to this group?
+
+
+sh.yesOrNo.to.invitation =Do you want to accept the invitation to the private shopping group?
+sh.decisionYes = Yes, I accept
+sh.decisionNo = No,I decline
+sh.if.accept = If you accept the invitation, you must accept the terms and conditions
+
+sh.invite = Invite users
+sh.not.invite = You are waiting for an order, you can not invite anyone
+
+sh.select.invitations = Select users to invite to the shopping group: 
+
+sh.number.invitations = You only can invite 
+
+sh.number.invitations2 = users
+
+sh.lessThanfeePlaces.error = You can not select more users than the number of free places
+
+sh.zeroselected.error = You have not selected anyone
+
+
+shoppingGroup.alreadyPunctuated     = You have already rated this group with: 
+shoppingGroup.alreadyPunctuated2	= If you wish you can re-rate.
+
