--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -54,7 +54,7 @@ sh.jointTo.must.accept.conditions = Debe aceptar los términos y condiciones
 
 sh.commit.error = No se pudo ejecutar la operación
 
-shoppingGroup.create = Crear un nuevo grupo de compra
+shoppingGroup.create = Crear un nuevo grupo de compra público
 
 sh.terms.must.accept = Debe aceptar los términos de uso
 
@@ -72,6 +72,9 @@ shoppingGroup.lastOrderDate			= Último Pedido
 shoppingGroup.freePlaces			= Plazas Libres
 shoppingGroup.addProduct            = Añadir Producto
 
+shoppingGroup.punctuate				= Puntuar
+
+
 user.comment = Realiza un nuevo comentario
 
 sh.joinTo.mess = Va a unirse al siguiente grupo de compras:
@@ -79,3 +82,29 @@ sh.joinTo.mess = Va a unirse al siguiente grupo de compras:
 shoppingGroup.join					= Unirse
 shoppingGroup.alreadyJoined			= Unido
 shoppingGroup.confirm.join			= ¿Está seguro de que desea unirse a este grupo?
+
+
+
+sh.yesOrNo.to.invitation = ¿Quiere aceptar la invitación al grupo de compras privado?
+sh.decisionYes = Sí, acepto
+sh.decisionNo = No, declino
+sh.if.accept  = Si acepta la invitación, debe aceptar los términos y condiciones de uso
+
+
+sh.invite = Invitar usuarios
+sh.not.invite = Están esperando un pedido, y no puede invitar a nadie 
+
+sh.select.invitations = Selecciona los usuarios a invitar al grupo de compra: 
+
+sh.number.invitations = Sólo puede invitar a 
+
+sh.number.invitations2 = usuarios
+
+sh.lessThanfeePlaces.error = No puede seleccionar más usuarios que el número de plazas libres
+
+
+sh.zeroselected.error = No ha seleccionado a nadie
+
+
+shoppingGroup.alreadyPunctuated     = Usted ya ha puntuado a este grupo con: 
+shoppingGroup.alreadyPunctuated2	= Si lo desea puede volver a puntuar.
