--- a/Acme-Together/src/main/webapp/views/administrator/messages.properties
+++ b/Acme-Together/src/main/webapp/views/administrator/messages.properties
@@ -13,3 +13,14 @@ administrator.usersWhoCreateMinusShoppingGroup = User who create minus shopping 
 
 administrator.actor.name = User account name
 administrator.actor.sg = Numbers of shopping group create by him
+
+
+administrator.shoppingGroupsWithMorePuntuation = Shopping Groups with more puntuation
+administrator.shoppingGroupsWithLessPuntuation = Shopping Groups with less puntuation 
+administrator.sg.name = Shopping group name
+administrator.sg.description = Shopping group description 
+administrator.sg.puntuation =  Shonpping group puntuation
+administrator.sg.creator = Creator
+
+administrator.percentShoppingGroupsWithFreePlaces = Percent of shopping groups with free places
+administrator.percentShoppingGroupsWithoutFreePlaces = Percent of shopping groups without free places
