--- a/Acme-Together/src/main/webapp/views/administrator/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/administrator/messages_es.properties
@@ -12,4 +12,14 @@ administrator.usersWhoCreateMoreShoppingGroup = Usuarios que han creado mas grup
 administrator.usersWhoCreateMinusShoppingGroup = Usuarios que han creado menos grupos de compra
 
 administrator.actor.name = Nombre de usuario 
-administrator.actor.sg = Numero de grupos de comprar creados por el
+administrator.actor.sg = Numero de grupos de comprar creados por el.
+
+administrator.shoppingGroupsWithMorePuntuation = Grupos de compra con mas puntuacion 
+administrator.shoppingGroupsWithLessPuntuation = Grupos de compra con menos puntacion 
+administrator.sg.name = Nombre del grupo de compra
+administrator.sg.description = Descripcion del grupo de compra
+administrator.sg.puntuation =  Puntuacion del grupo de compra
+administrator.sg.creator = Creador
+
+administrator.percentShoppingGroupsWithFreePlaces = Porcentaje de grupos de compra con plazas libres
+administrator.percentShoppingGroupsWithoutFreePlaces = Percentaje de grupos de compra sin plazas libres 
