--- a/Acme-Together/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages.properties
@@ -14,6 +14,7 @@ master.page.UserJoinedShoppingGroups= Joined Shopping Groups
 master.page.registerUser			= Register
 master.page.administrator			= Administrator
 master.page.viewMyWarehouses		= View My Warehouses
+master.page.listCoupons				= Coupons
 
 master.page.customer				= Customer
 
