--- a/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
@@ -15,6 +15,7 @@ master.page.UserJoinedShoppingGroups= Grupos a los que esta unido.
 master.page.registerUser			= Registrarse
 master.page.administrator			= Administrador
 master.page.viewMyWarehouses		= Ver mis Almacenes
+master.page.listCoupons				= Cupones
 
 
 master.page.customer				= Cliente
