--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -57,6 +57,7 @@ sh.noteditableInList=This group cannot be edited or deleted, you are waiting for
 sh.noteditableInList2= You can't edit this group
 
 shoppingGroup.create = Create a new public ShoppingGroup
+shoppingGroup.createPrivate = Create a new private ShoppingGroup
 
 sh.not.mine = You can only edit or delete the groups that you have created
 
