--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -55,6 +55,7 @@ sh.jointTo.must.accept.conditions = Debe aceptar los términos y condiciones
 sh.commit.error = No se pudo ejecutar la operación
 
 shoppingGroup.create = Crear un nuevo grupo de compra público
+shoppingGroup.createPrivate = Crear un nuevo grupo de compra privado
 
 sh.terms.must.accept = Debe aceptar los términos de uso
 
