--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -86,6 +86,8 @@ shoppingGroup.join					= Join
 shoppingGroup.alreadyJoined			= Already Joined
 shoppingGroup.confirm.join			= Are you sure about join to this group?
 
+shoppingGroup.confirm.leave		= Are you sure about leave this group?
+
 
 
 sh.yesOrNo.to.invitation =Do you want to accept the invitation to the private shopping group?
@@ -109,5 +111,7 @@ sh.zeroselected.error = You have not selected anyone
 
 shoppingGroup.alreadyPunctuated     = You have already rated this group with: 
 shoppingGroup.alreadyPunctuated2	= If you wish you can re-rate.
+
+sh.leave = Leave this group
 
 
