--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -88,6 +88,8 @@ shoppingGroup.join					= Unirse
 shoppingGroup.alreadyJoined			= Unido
 shoppingGroup.confirm.join			= ¿Está seguro de que desea unirse a este grupo?
 
+shoppingGroup.confirm.leave		= ¿Está seguro de que desea abandonar este grupo?
+
 
 
 
@@ -114,4 +116,7 @@ sh.zeroselected.error = No ha seleccionado a nadie
 
 shoppingGroup.alreadyPunctuated     = Usted ya ha puntuado a este grupo con: 
 shoppingGroup.alreadyPunctuated2	= Si lo desea puede volver a puntuar.
+
+sh.leave = Abandonar este grupo
+
 
