Distributor-Manage Warehouses

--- a/Acme-Together/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages.properties
@@ -13,7 +13,7 @@ master.page.listDistributors		= Distributors
 master.page.UserJoinedShoppingGroups= Joined Shopping Groups
 master.page.registerUser			= Register
 master.page.administrator			= Administrator
-
+master.page.viewMyWarehouses		= View My Warehouses
 
 master.page.customer				= Customer
 
