--- a/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
@@ -14,6 +14,7 @@ master.page.listDistributors		= Distribuidores
 master.page.UserJoinedShoppingGroups= Grupos a los que esta unido.
 master.page.registerUser			= Registrarse
 master.page.administrator			= Administrador
+master.page.viewMyWarehouses		= Ver mis Almacenes
 
 
 master.page.customer				= Cliente
