List of Orders by Warehouse

--- a/Acme-Together/src/main/webapp/views/warehouse/messages.properties
+++ b/Acme-Together/src/main/webapp/views/warehouse/messages.properties
@@ -18,3 +18,11 @@ warehouse.accept		= Accept
 warehouse.commit.error		= Commit Error
 warehouse.profile	 = View Profile
 warehouse.cancel		= Cancel
+warehouse.create		= Create
+warehouse.orders		= Orders
+
+
+order.initDate	 = Init Date
+order.finishDate	 = Finish Date
+order.status		= Status
+order.totalPrice	= Total Price
