--- a/Acme-Together/src/main/webapp/views/warehouse/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/warehouse/messages_es.properties
@@ -16,8 +16,12 @@ warehouse.save		= Guardar
 warehouse.accept		= Aceptar
 warehouse.commit.error		= Error en la transacción
 warehouse.cancel		= Cancelar
-
-
-
-
 warehouse.profile = Ver Perfil
+warehouse.create		= Crear
+warehouse.orders		= Pedidos
+
+
+order.initDate	 = Fecha de Inicio
+order.finishDate	 = Fecha de Fin
+order.status		= Estado
+order.totalPrice	= Precio Total
