Orders from a Distributor.

--- a/Acme-Together/src/main/webapp/views/warehouse/messages.properties
+++ b/Acme-Together/src/main/webapp/views/warehouse/messages.properties
@@ -26,3 +26,5 @@ order.initDate	 = Init Date
 order.finishDate	 = Finish Date
 order.status		= Status
 order.totalPrice	= Total Price
+order.changeStatus	= Change Status
+order.removeOrder	= Remove Order
