--- a/Acme-Together/src/main/webapp/views/warehouse/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/warehouse/messages_es.properties
@@ -25,3 +25,5 @@ order.initDate	 = Fecha de Inicio
 order.finishDate	 = Fecha de Fin
 order.status		= Estado
 order.totalPrice	= Precio Total
+order.changeStatus	= Cambiar Estado Pedido
+order.removeOrder	= Eliminar Pedido
