--- a/Acme-Together/src/main/webapp/views/coupon/messages.properties
+++ b/Acme-Together/src/main/webapp/views/coupon/messages.properties
@@ -18,6 +18,7 @@ coupon.info = Coupon Information
 coupon.save = Save
 coupon.cancel = Cancel
 
+coupon.commit.error.used = Cannot commit this operation why coupon is used
 coupon.commit.error = Cannot commit this operation
 coupon.not.your.coupon = You cannot edit this coupon
 coupon.not.your.coupon.delete = You cannot delete this coupon
