--- a/Acme-Together/src/main/webapp/views/coupon/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/coupon/messages_es.properties
@@ -17,6 +17,7 @@ coupon.info = Información del cupon
 coupon.save = Guardar
 coupon.cancel = Cancelar
 
+coupon.commit.error.used = No puedo realizar esta operación porque el cupón está en uso.
 coupon.commit.error = No se pudo ejecutar la operación
 coupon.not.your.coupon = No puede editar este cupon
 coupon.not.your.coupon.delete = No puede eliminar este cupon
